--- a/index.html
+++ b/index.html
@@ -1998,9 +1998,9 @@ pointer-events: none;
 </head>
 <body>
 <div id="htmlwidget_container">
-  <div id="htmlwidget-b7483fc6b75a6b621fe6" style="width:500px;height:500px;" class="chorddiag html-widget"></div>
+  <div id="htmlwidget-ed4eeb418ea36afd5965" style="width:500px;height:500px;" class="chorddiag html-widget"></div>
 </div>
-<script type="application/json" data-for="htmlwidget-b7483fc6b75a6b621fe6">{"x":{"matrix":[[1588,145,589],[178,2873,270],[352,145,999]],"options":{"type":"directional","width":500,"height":500,"margin":100,"showGroupnames":true,"groupNames":["Dijksgrachtpark","Oosterdokskade","Tramhalte"],"groupColors":["#ff715b","#1ea896","#523f38"],"groupThickness":0.1,"groupPadding":0.0349065850398866,"groupnamePadding":[30,30,30],"groupnameFontsize":10,"groupedgeColor":null,"chordedgeColor":"#808080","categoryNames":null,"categorynamePadding":100,"categorynameFontsize":28,"showTicks":true,"tickInterval":100,"ticklabelFontsize":10,"fadeLevel":0.1,"showTooltips":true,"showZeroTooltips":true,"tooltipNames":["Dijksgrachtpark","Oosterdokskade","Tramhalte"],"tooltipFontsize":12,"tooltipUnit":"","tooltipGroupConnector":" &#x25B6; ","precision":"null","clickAction":null,"clickGroupAction":null}},"evals":[],"jsHooks":[]}</script>
-<script type="application/htmlwidget-sizing" data-for="htmlwidget-b7483fc6b75a6b621fe6">{"viewer":{"width":500,"height":500,"padding":0,"fill":false},"browser":{"width":500,"height":500,"padding":0,"fill":false}}</script>
+<script type="application/json" data-for="htmlwidget-ed4eeb418ea36afd5965">{"x":{"matrix":[[1612,271,605],[183,3540,310],[364,284,1043]],"options":{"type":"directional","width":500,"height":500,"margin":100,"showGroupnames":true,"groupNames":["D","O","T"],"groupColors":["#ff715b","#1ea896","#523f38"],"groupThickness":0.1,"groupPadding":0.0349065850398866,"groupnamePadding":[50,50,50],"groupnameFontsize":20,"groupedgeColor":null,"chordedgeColor":"#808080","categoryNames":null,"categorynamePadding":100,"categorynameFontsize":28,"showTicks":true,"tickInterval":100,"ticklabelFontsize":10,"fadeLevel":0.1,"showTooltips":true,"showZeroTooltips":true,"tooltipNames":["D","O","T"],"tooltipFontsize":12,"tooltipUnit":"","tooltipGroupConnector":" &#x25B6; ","precision":"null","clickAction":null,"clickGroupAction":null}},"evals":[],"jsHooks":[]}</script>
+<script type="application/htmlwidget-sizing" data-for="htmlwidget-ed4eeb418ea36afd5965">{"viewer":{"width":500,"height":500,"padding":0,"fill":false},"browser":{"width":500,"height":500,"padding":0,"fill":false}}</script>
 </body>
 </html>
